# assimp_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/models/Low-Poly Spider/: Only_Spider_with_Animations_Export.3ds  Only_Spider_with_Animations_Export.fbx  Only_Spider_with_Animations_Export_2.dae
data/shaders/: G24.frag  G24.geom  G24.vert  G4.frag  G4.geom  G4.vert  main.1.frag  main.1.vert  main.frag  main.vert
data/textures/: terrain.dds
srcs/: Core.cpp  Core.hpp  main.cpp
srcs/exceptions/: VoxException.cpp  VoxException.hpp
srcs/exceptions/glew/: GlewException.cpp  GlewException.hpp  GlewInitException.cpp  GlewInitException.hpp
srcs/exceptions/glfw/: GlfwException.cpp  GlfwException.hpp  GlfwInitException.cpp  GlfwInitException.hpp  GlfwWindowCreationException.cpp  GlfwWindowCreationException.hpp
srcs/exceptions/shaders/: ShaderCreationException.cpp  ShaderCreationException.hpp  ShaderException.cpp  ShaderException.hpp  ShaderProgramCreationException.cpp  ShaderProgramCreationException.hpp
srcs/graphics/: Camera.cpp  Camera.hpp  Display.cpp  Display.hpp  IRendereable.hpp  Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp  ModelBone.cpp  ModelBone.hpp  ModelSkeleton.cpp  ModelSkeleton.hpp  Shader.cpp  Shader.hpp
srcs/graphics/textures/: Texture.cpp  Texture.hpp  TextureDDS.cpp
srcs/inputs/: Input.cpp  Input.hpp
srcs/maths/: Mat4.hpp  Maths.hpp  Vec2.hpp  Vec3.hpp  glmUtils.cpp  glmUtils.hpp
srcs/utils/: FileUtils.cpp  FileUtils.hpp
srcs/world/: World.cpp  World.hpp
srcs/world/blocks/: ABlock.cpp  ABlock.hpp  Blocks.cpp  Blocks.hpp  EmptyBlock.cpp  EmptyBlock.hpp  GlassBlock.cpp  GlassBlock.hpp  StoneBlock.cpp  StoneBlock.hpp  TntBlock.cpp  TntBlock.hpp
srcs/world/chunks/: Chunk.cpp  Chunk.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  ChunkRendererG24.cpp  ChunkRendererG24.hpp  ChunkRendererG4.cpp  ChunkRendererG4.hpp
